--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 sidux-edu (0.2.3) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 17 Jan 2008 03:32:19 +0100
+  [ Fabian Wuertz ]
+  * tuxtype-, qgis-, ksociograma- and octave-appfiles fixed
+  * get-icon-function updated
+
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 17 Jan 2008 18:37:20 +0100
 
 sidux-edu (0.2.2) unstable; urgency=low
 
