sidux-edu (0.2.3) unstable; urgency=low
  * tuxtype-, qgis-, ksociograma- and octave-appfiles fixed
  * get-icon-function updated

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 17 Jan 2008 18:37:20 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.2.3) UNRELEASED; urgency=low
+sidux-edu (0.2.3) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * tuxtype-, qgis-, ksociograma- and octave-appfiles fixed
   * get-icon-function updated
 
