--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.2.4) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 18 Jan 2008 19:42:47 +0100
+
 sidux-edu (0.2.3) unstable; urgency=low
 
   * tuxtype-, qgis-, ksociograma- and octave-appfiles fixed
