--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,22 @@
 sidux-edu (0.2.4) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 18 Jan 2008 19:42:47 +0100
+  [ Fabian Wuertz ]
+  * copyExample function added
+  * notedit updated
+  * seminarix icon removed
+
+ -- Fabian Wuertz <xadras@sidux.com>  Fri, 18 Jan 2008 22:32:18 +0100
 
 sidux-edu (0.2.3) unstable; urgency=low
 
   * tuxtype-, qgis-, ksociograma- and octave-appfiles fixed
   * get-icon-function updated
+  * noteedit-appfile fixed
 
- -- Fabian Wuertz <xadras@sidux.com>  Thu, 17 Jan 2008 18:37:20 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 17 Jan 2008 20:07:26 +0100
 
 sidux-edu (0.2.2) unstable; urgency=low
 
