--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ sidux-edu (0.2.4) UNRELEASED; urgency=low
   * copyExample function added
   * notedit updated
   * seminarix icon removed
+  * copyExample function updated
 
- -- Fabian Wuertz <xadras@sidux.com>  Fri, 18 Jan 2008 22:32:18 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Fri, 18 Jan 2008 22:43:39 +0100
 
 sidux-edu (0.2.3) unstable; urgency=low
 
