--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ sidux-edu (0.2.4) UNRELEASED; urgency=low
   * notedit updated
   * seminarix icon removed
   * copyExample function updated
+  * example question updated
 
- -- Fabian Wuertz <xadras@sidux.com>  Fri, 18 Jan 2008 22:43:39 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Fri, 18 Jan 2008 22:53:31 +0100
 
 sidux-edu (0.2.3) unstable; urgency=low
 
