--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,4 @@
-sidux-edu (0.2.4) UNRELEASED; urgency=low
-
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
+sidux-edu (0.2.4) unstable; urgency=low
 
   [ Fabian Wuertz ]
   * copyExample function added
@@ -10,7 +7,10 @@ sidux-edu (0.2.4) UNRELEASED; urgency=low
   * copyExample function updated
   * example question updated
 
- -- Fabian Wuertz <xadras@sidux.com>  Fri, 18 Jan 2008 22:53:31 +0100
+  [ Stefan Lippers-Hollmann ]
+  * update to debhelper compat 6.
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 19 Jan 2008 02:22:19 +0100
 
 sidux-edu (0.2.3) unstable; urgency=low
 
