--- a/debian/changelog
+++ b/debian/changelog
@@ -1,34 +1,20 @@
 sidux-edu (0.2.4) unstable; urgency=low
 
-  * NOT RELEASED YET
-  * FTBS:
-    /usr/bin/install -c -p -m 644 /tmp/buildd/sidux-edu-0.2.4/./icons/hi32-app-seminarix.png /tmp/buildd/sidux-edu-0.2.4/debian/sidux-edu//usr/share/icons/hicolor/32x32/apps/seminarix.png
-    /usr/bin/install: cannot stat `/tmp/buildd/sidux-edu-0.2.4/./icons/hi32-app-seminarix.png': No such file or directory
-    make[3]: *** [install-kde-icons] Error 1
-    make[3]: Leaving directory `/tmp/buildd/sidux-edu-0.2.4/obj-x86_64-linux-gnu/icons'
-    make[2]: *** [install-am] Error 2
-    make[2]: Leaving directory `/tmp/buildd/sidux-edu-0.2.4/obj-x86_64-linux-gnu/icons'
-    make[1]: *** [install-recursive] Error 1
-    make[1]: Leaving directory `/tmp/buildd/sidux-edu-0.2.4/obj-x86_64-linux-gnu'
-    make: *** [common-install-impl] Error 2
-    (it's also been used in debian/rules and debian/install for the desktop icon)
-
   [ Fabian Wuertz ]
   * copyExample function added
   * notedit updated
   * seminarix icon removed
   * copyExample function updated
   * example question updated
-
-  [ Stefan Lippers-Hollmann ]
-  * update to debhelper compat 6.
-
-  [ Fabian Wuertz ]
   * keducabuilder updated
   * exmaples path updated
   * icon problem solved
 
- -- Fabian Wuertz <xadras@sidux.com>  Sat, 19 Jan 2008 14:40:38 +0100
+  [ Stefan Lippers-Hollmann ]
+  * update to debhelper compat 6.
+  * the desktop icon has been removed from upstream sources, ship without it.
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 19 Jan 2008 15:23:20 +0100
 
 sidux-edu (0.2.3) unstable; urgency=low
 
