sidux-edu (0.2.5) unstable; urgency=low
  * icon added
  * samples path updated

 -- Fabian Wuertz <xadras@sidux.com>  Sat, 19 Jan 2008 17:55:13 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.2.5) UNRELEASED; urgency=low
+sidux-edu (0.2.5) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * icon added
   * samples path updated 
 
