--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.2.6) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 20 Jan 2008 00:45:49 +0100
+
 sidux-edu (0.2.5) unstable; urgency=low
 
   [ Fabian Wuertz ]
