--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.2.6) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 20 Jan 2008 00:45:49 +0100
+  [ Fabian Wuertz ]
+  * icon paths fixed in main.cpp and systray.cpp
+
+ -- Fabian Wuertz <xadras@sidux.com>  Mon, 21 Jan 2008 16:06:44 +0100
 
 sidux-edu (0.2.5) unstable; urgency=low
 
