--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ sidux-edu (0.2.6) UNRELEASED; urgency=low
 
   [ Fabian Wuertz ]
   * icon paths fixed in main.cpp and systray.cpp
+  * icon in EduDialog updated 
 
- -- Fabian Wuertz <xadras@sidux.com>  Mon, 21 Jan 2008 16:06:44 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Mon, 21 Jan 2008 16:11:56 +0100
 
 sidux-edu (0.2.5) unstable; urgency=low
 
