sidux-edu (0.2.6) unstable; urgency=low
  * icon paths fixed in main.cpp and systray.cpp
  * icon in EduDialog updated

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 21 Jan 2008 16:11:56 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.2.6) UNRELEASED; urgency=low
+sidux-edu (0.2.6) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * icon paths fixed in main.cpp and systray.cpp
   * icon in EduDialog updated 
 
