--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ sidux-edu (0.2.7) UNRELEASED; urgency=low
 
   [ Ferdinand Thommes ]
   * set seminarix-samples to depends from recommends
+  * set seminarix-samples to depends from recommends again
 
- -- Ferdinand Thommes <devil@sidux.com>  Fri, 25 Jan 2008 09:12:24 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Fri, 25 Jan 2008 09:20:00 +0100
 
 sidux-edu (0.2.6) unstable; urgency=low
 
