--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ sidux-edu (0.2.7) UNRELEASED; urgency=low
   [ Ferdinand Thommes ]
   * set seminarix-samples to depends from recommends
   * set seminarix-samples to depends from recommends again
+  * added new icon for siduxedu
 
- -- Ferdinand Thommes <devil@sidux.com>  Fri, 25 Jan 2008 09:20:00 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Fri, 25 Jan 2008 09:22:24 +0100
 
 sidux-edu (0.2.6) unstable; urgency=low
 
