--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ sidux-edu (0.2.7) UNRELEASED; urgency=low
   * added new icon for siduxedu
   * changed icon for siduxedu to match new sidux icons
   * changed icon
+  * changed icon
 
- -- Ferdinand Thommes <devil@sidux.com>  Fri, 25 Jan 2008 09:29:58 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Fri, 25 Jan 2008 09:34:33 +0100
 
 sidux-edu (0.2.6) unstable; urgency=low
 
