--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,9 @@ sidux-edu (0.2.7) UNRELEASED; urgency=low
   * changed icon
   * changed icon
   * changed icon for siduxedu
+  * added icon and changed seminarix-samples to depend
 
- -- Ferdinand Thommes <devil@sidux.com>  Fri, 25 Jan 2008 09:43:52 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Fri, 25 Jan 2008 09:45:48 +0100
 
 sidux-edu (0.2.6) unstable; urgency=low
 
