--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.2.8) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 26 Jan 2008 00:45:57 +0100
+
 sidux-edu (0.2.7) unstable; urgency=low
 
   [ Ferdinand Thommes ]
