--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.2.8) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 26 Jan 2008 00:45:57 +0100
+  [ Ferdinand Thommes ]
+  * updated to final icon
+
+ -- Ferdinand Thommes <devil@sidux.com>  Tue, 29 Jan 2008 20:44:34 +0100
 
 sidux-edu (0.2.7) unstable; urgency=low
 
