sidux-edu (0.2.8) unstable; urgency=low
  * updated to final icon
  * added final icons

 -- Ferdinand Thommes <devil@sidux.com>  Tue, 29 Jan 2008 21:14:37 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.2.8) UNRELEASED; urgency=low
+sidux-edu (0.2.8) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Ferdinand Thommes ]
   * updated to final icon
   * added final icons
 
