--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.2.9) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 30 Jan 2008 22:33:35 +0100
+  [ Ferdinand Thommes ]
+  * added kcalc.pmap
+
+ -- Ferdinand Thommes <devil@sidux.com>  Wed, 30 Jan 2008 22:48:57 +0100
 
 sidux-edu (0.2.8) unstable; urgency=low
 
