--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.2.10) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 30 Jan 2008 22:58:06 +0100
+  [ Fabian Wuertz ]
+  * rkward pmap file updated
+
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 31 Jan 2008 21:05:19 +0100
 
 sidux-edu (0.2.9) unstable; urgency=low
 
