--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ sidux-edu (0.2.11) UNRELEASED; urgency=low
 
   [ Fabian Wuertz ]
   * pmaps updated
+  * gcompris updadet
 
- -- Fabian Wuertz <xadras@sidux.com>  Sun, 03 Feb 2008 22:41:25 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Sun, 03 Feb 2008 22:43:03 +0100
 
 sidux-edu (0.2.10) unstable; urgency=low
 
