sidux-edu (0.2.11) unstable; urgency=low
  [ Fabian Wuertz ]
  * pmaps updated
  * gcompris updadet

  [ Ferdinand Thommes ]
  * removed mask from sidux s in siduxedu icon
  * removed mask from sidux s in siduxedu icon

 -- Ferdinand Thommes <devil@sidux.com>  Mon, 04 Feb 2008 23:04:04 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,4 @@
-sidux-edu (0.2.11) UNRELEASED; urgency=low
-
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
+sidux-edu (0.2.11) unstable; urgency=low
 
   [ Fabian Wuertz ]
   * pmaps updated
