* ui-file and gcomparis recovered

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,176 +13,10 @@ sidux-edu (0.2.11) UNRELEASED; urgency=low
   [ Ferdinand Thommes ]
   * removed mask from sidux s in siduxedu icon
 
-cd /tmp/buildd/sidux-edu-0.2.11/. && perl admin/am_edit src/Makefile.in
-rm -rf edudialog.h;
-/usr/share/qt3/bin/uic -L /usr/lib/kde3/plugins/designer -nounload /tmp/buildd/sidux-edu-0.2.11/./src/edudialog.ui | /usr/bin/perl -pi -e "s,public QWizard,public KWizard,g; s,#include <qwizard.h>,#include <kwizard.h>,g" >> edudialog.h ;
-*** glibc detected *** /usr/share/qt3/bin/uic: double free or corruption (out): 0x000000000065b890 ***
-======= Backtrace: =========
-/lib/libc.so.6[0x2b2512edc02a]
-/lib/libc.so.6(cfree+0x8c)[0x2b2512edfbbc]
-/usr/share/qt3/bin/uic(_ZN17QValueListPrivateI7QStringED1Ev+0x49)[0x40e277]
-/usr/share/qt3/bin/uic(_ZN17QValueListPrivateI7QStringE14derefAndDeleteEv+0x29)[0x40e2dd]
-/usr/share/qt3/bin/uic(_ZN10QValueListI7QStringED2Ev+0x18)[0x40e364]
-/usr/share/qt3/bin/uic(_ZN11QStringListD1Ev+0x15)[0x40e37b]
-/usr/share/qt3/bin/uic[0x40e884]
-/usr/share/qt3/bin/uic[0x40d614]
-/lib/libc.so.6(__libc_start_main+0xf4)[0x2b2512e861c4]
-/usr/share/qt3/bin/uic[0x40be79]
-======= Memory map: ========
-00400000-0044c000 r-xp 00000000 fe:01 2032626                            /usr/bin/uic-qt3
-0064b000-0064d000 rw-p 0004b000 fe:01 2032626                            /usr/bin/uic-qt3
-0064d000-009e2000 rw-p 0064d000 00:00 0                                  [heap]
-2b250f7c9000-2b250f7e6000 r-xp 00000000 fe:01 2016330                    /lib/ld-2.7.so
-2b250f7e6000-2b250f7ea000 rw-p 2b250f7e6000 00:00 0
-2b250f827000-2b250f828000 rw-p 2b250f827000 00:00 0
-2b250f8a9000-2b250f8ea000 rw-p 2b250f8a9000 00:00 0
-2b250f9e5000-2b250f9e7000 rw-p 0001c000 fe:01 2016330                    /lib/ld-2.7.so
-2b250f9e7000-2b2510392000 r-xp 00000000 fe:01 2114933                    /usr/lib/libqt-mt.so.3.3.7
-2b2510392000-2b2510591000 ---p 009ab000 fe:01 2114933                    /usr/lib/libqt-mt.so.3.3.7
-2b2510591000-2b251061a000 rw-p 009aa000 fe:01 2114933                    /usr/lib/libqt-mt.so.3.3.7
-2b251061a000-2b2510620000 rw-p 2b251061a000 00:00 0
-2b2510620000-2b2510641000 r-xp 00000000 fe:01 2114837                    /usr/lib/libjpeg.so.62.0.0
-2b2510641000-2b2510841000 ---p 00021000 fe:01 2114837                    /usr/lib/libjpeg.so.62.0.0
-2b2510841000-2b2510842000 rw-p 00021000 fe:01 2114837                    /usr/lib/libjpeg.so.62.0.0
-2b2510842000-2b2510865000 r-xp 00000000 fe:01 2114843                    /usr/lib/libpng12.so.0.15.0
-2b2510865000-2b2510a65000 ---p 00023000 fe:01 2114843                    /usr/lib/libpng12.so.0.15.0
-2b2510a65000-2b2510a66000 rw-p 00023000 fe:01 2114843                    /usr/lib/libpng12.so.0.15.0
-2b2510a66000-2b2510a67000 rw-p 2b2510a66000 00:00 0
-2b2510a67000-2b2510a7d000 r-xp 00000000 fe:01 2114749                    /usr/lib/libz.so.1.2.3.3
-2b2510a7d000-2b2510c7d000 ---p 00016000 fe:01 2114749                    /usr/lib/libz.so.1.2.3.3
-2b2510c7d000-2b2510c7e000 rw-p 00016000 fe:01 2114749                    /usr/lib/libz.so.1.2.3.3
-2b2510c7e000-2b2510c86000 r-xp 00000000 fe:01 2114926                    /usr/lib/libXi.so.6.0.0
-2b2510c86000-2b2510e86000 ---p 00008000 fe:01 2114926                    /usr/lib/libXi.so.6.0.0
-2b2510e86000-2b2510e87000 rw-p 00008000 fe:01 2114926                    /usr/lib/libXi.so.6.0.0
-2b2510e87000-2b2510e90000 r-xp 00000000 fe:01 2114920                    /usr/lib/libXrender.so.1.3.0
-2b2510e90000-2b251108f000 ---p 00009000 fe:01 2114920                    /usr/lib/libXrender.so.1.3.0
-2b251108f000-2b2511090000 rw-p 00008000 fe:01 2114920                    /usr/lib/libXrender.so.1.3.0
-2b2511090000-2b2511091000 rw-p 2b2511090000 00:00 0
-2b2511091000-2b2511097000 r-xp 00000000 fe:01 2114930                    /usr/lib/libXrandr.so.2.1.0
-2b2511097000-2b2511297000 ---p 00006000 fe:01 2114930                    /usr/lib/libXrandr.so.2.1.0
-2b2511297000-2b2511298000 rw-p 00006000 fe:01 2114930                    /usr/lib/libXrandr.so.2.1.0
-2b2511298000-2b25112a1000 r-xp 00000000 fe:01 2114922                    /usr/lib/libXcursor.so.1.0.2
-2b25112a1000-2b25114a1000 ---p 00009000 fe:01 2114922                    /usr/lib/libXcursor.so.1.0.2
-2b25114a1000-2b25114a2000 rw-p 00009000 fe:01 2114922                    /usr/lib/libXcursor.so.1.0.2
-2b25114a2000-2b25114a4000 r-xp 00000000 fe:01 2114928                    /usr/lib/libXinerama.so.1.0.0
-2b25114a4000-2b25115a3000 ---p 00002000 fe:01 2114928                    /usr/lib/libXinerama.so.1.0.0
-2b25115a3000-2b25115a4000 rw-p 00001000 fe:01 2114928                    /usr/lib/libXinerama.so.1.0.0
-2b25115a4000-2b25115a5000 rw-p 2b25115a4000 00:00 0
-2b25115a5000-2b25115b8000 r-xp 00000000 fe:01 2114924                    /usr/lib/libXft.so.2.1.2
-2b25115b8000-2b25116b7000 ---p 00013000 fe:01 2114924                    /usr/lib/libXft.so.2.1.2
-2b25116b7000-2b25116b8000 rw-p 00012000 fe:01 2114924                    /usr/lib/libXft.so.2.1.2
-2b25116b8000-2b2511730000 r-xp 00000000 fe:01 2114833                    /usr/lib/libfreetype.so.6.3.16
-2b2511730000-2b2511930000 ---p 00078000 fe:01 2114ASSERT: "it.node != node" in ../../../include/qvaluelist.h (301)
-/usr/share/qt3/bin/moc /tmp/buildd/sidux-edu-0.2.11/./src/edu.h -o edu.moc
-g++ -DHAVE_CONFIG_H -I. -I/tmp/buildd/sidux-edu-0.2.11/./src -I..  -I/usr/include/kde -I/usr/share/qt3/include -I.  -DQT_THREAD_SUPPORT  -D_REENTRANT  -Wno-long-long -Wundef -ansi -D_XOPEN_SOURCE=500 -D_BSD_SOURCE -Wcast-align -Wconversion -Wchar-subscripts -Wall -W -Wpointer-arith -DNDEBUG -DNO_DEBUG -O2 -g -Wall -O2 -Wformat-security -Wmissing-format-attribute -Wno-non-virtual-dtor -fno-exceptions -fno-check-new -fno-common  -c -o edu.o /tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp
-In file included from /tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:50:
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.h:32: error: expected class-name before '{' token
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In constructor 'edu::edu(QWidget*, const char*, const QStringList&)':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:56: error: class 'edu' does not have any field named 'EduDialog'
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'void edu::load()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:65: error: 'statusBar' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:71: error: 'konsoleFrame' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:72: error: 'execPushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:73: error: 'homepagePushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:74: error: 'examplePushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:75: error: 'widgetStack' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:79: error: 'categoriesListView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'void edu::getCategories()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:101: error: 'categoriesListView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:106: error: 'categoriesListView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'void edu::getAllApps()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:116: error: 'listView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::getApps()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:230: error: 'categoriesListView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:233: error: 'widgetStack' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:235: error: 'appsListBox' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:237: error: 'categoriesListView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:246: error: 'descriptionTextBrowser' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:252: error: 'listView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:253: error: 'comboBox' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::searchApp()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:319: error: 'widgetStack' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:321: error: 'appsListBox' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:322: error: 'descriptionTextBrowser' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:327: error: 'listView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:329: error: 'searchLineEdit' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::getDescription()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:368: error: 'appsListBox' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:369: error: 'listView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:370: error: 'descriptionTextBrowser' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::execApp()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:377: error: 'appsListBox' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:378: error: 'listView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:393: error: 'categoriesListView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:394: error: 'searchLineEdit' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:395: error: 'widgetStack' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:402: error: 'connect' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::back()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:410: error: 'categoriesListView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:411: error: 'searchLineEdit' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:412: error: 'widgetStack' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:414: error: 'konsoleFrame' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::showHomepage()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:422: error: 'appsListBox' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:423: error: 'listView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::copyExample()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:430: error: no matching function for call to 'KMessageBox::questionYesNo(edu* const, const char [61])'
-/usr/include/kde/kmessagebox.h:121: note: candidates are: static int KMessageBox::questionYesNo(QWidget*, const QString&, const QString&, const KGuiItem&, const KGuiItem&, const QString&, int)
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:431: error: 'appsListBox' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:432: error: 'listView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::enableButtons()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:444: error: 'appsListBox' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:445: error: 'listView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:450: error: 'execPushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:452: error: 'execPushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:455: error: 'examplePushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:457: error: 'examplePushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:459: error: 'execPushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:463: error: 'homepagePushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:465: error: 'homepagePushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:445: warning: unused variable 'package'
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::disableButtons()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:471: error: 'execPushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:472: error: 'homepagePushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:473: error: 'examplePushButton' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::openUrl(const QString&)':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:481: error: 'descriptionTextBrowser' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:481: error: 'categoriesListView' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'void edu::loadKonsole()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:502: error: 'konsoleFrame' was not declared in this scope
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: At global scope:
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:508: warning: unused parameter 'o'
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::about()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:527: error: no matching function for call to 'KAboutApplication::KAboutApplication(edu* const)'
-/usr/include/kde/kaboutapplication.h:79: note: candidates are: KAboutApplication::KAboutApplication(const KAboutData*, QWidget*, const char*, bool)
-/usr/include/kde/kaboutapplication.h:60: note:                 KAboutApplication::KAboutApplication(QWidget*, const char*, bool)
-/usr/include/kde/kaboutapplication.h:45: note:                 KAboutApplication::KAboutApplication(const KAboutApplication&)
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp: In member function 'virtual void edu::aboutKDE()':
-/tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:533: error: no matching function for call to 'KAboutKDE::KAboutKDE(edu* const)'
-/usr/include/kde/kaboutkde.h:56: note: candidates are: KAboutKDE::KAboutKDE(QWidget*, const char*, bool)
-/usr/include/kde/kaboutkde.h:41: note:                 KAboutKDE::KAboutKDE(const KAboutKDE&)
-In file included from /tmp/buildd/sidux-edu-0.2.11/./src/edu.cpp:556:
-./edu.moc: In static member function 'static QMetaObject* edu::staticMetaObject()':
-./edu.moc:54: error: 'EduDialog' has not been declared
-./edu.moc: In member function 'virtual void* edu::qt_cast(const char*)':
-./edu.moc:107: error: 'EduDialog' has not been declared
-./edu.moc: In member function 'virtual bool edu::qt_invoke(int, QUObject*)':
-./edu.moc:129: error: 'EduDialog' has not been declared
-./edu.moc: In member function 'virtual bool edu::qt_emit(int, QUObject*)':
-./edu.moc:136: error: 'EduDialog' has not been declared
-./edu.moc: In member function 'virtual bool edu::qt_property(int, int, QVariant*)':
-./edu.moc:142: error: 'EduDialog' has not been declared
-make[3]: *** [edu.o] Error 1
-make[3]: Leaving directory `/tmp/buildd/sidux-edu-0.2.11/obj-x86_64-linux-gnu/src'
-make[2]: *** [all-recursive] Error 1
-make[2]: Leaving directory `/tmp/buildd/sidux-edu-0.2.11/obj-x86_64-linux-gnu'
-make[1]: *** [all] Error 2
-make[1]: Leaving directory `/tmp/buildd/sidux-edu-0.2.11/obj-x86_64-linux-gnu'
-make: *** [debian/stamp-makefile-build] Error 2
-dpkg-buildpackage: failure: debian/rules build gave error exit status 2
-pbuilder: Failed autobuilding of package
+  [ Fabian Wuertz ]
+  * ui-file and gcomparis recovered
 
- -- Ferdinand Thommes <devil@sidux.com>  Mon, 04 Feb 2008 23:04:04 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Tue, 05 Feb 2008 22:14:02 +0100
 
 sidux-edu (0.2.10) unstable; urgency=low
 
